--- a/index.html
+++ b/index.html
@@ -7,18 +7,36 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- <script type="module" src='./dist/bundle.js'></script> -->
     <!-- <script type="module" src='./main.js'></script> -->
+    <!-- <script type="module" src="./bundle.js"></script> -->
 </head>
 <body>
     <h1>Hi from page trying to use webpack module bundler...</h1>
     <h2>My number is <span id="my_number"></span></h2>
 
-    <script>
+   <!--  <script>
         import('./main.js').then(
             (m)=>{
                 console.log('Module main.js loaded...');
                 console.log(m.MyLuckyNumber);
             }
         )
+    </script> -->
+    <script>
+        /* const saberi_sa_2 = (broj)=>{
+            return broj+2;
+        }
+
+        document.getElementById('my_number').innerHTML = saberi_sa_2(5); */
+
+        window.onload = () => {
+            import('./bundle.js').then(
+                (m)=>{
+                    console.log(m);
+                    console.log(m.PavleBroj);
+                }
+            )
+
+        }
     </script>
 </body>
 </html>
