--- a/index.html
+++ b/index.html
@@ -5,43 +5,20 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Moja proba</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <script type="module" src='./dist/bundle.js'></script> -->
-    <!-- <script type="module" src='./main.js'></script> -->
-    <!-- <script type="module" src="./bundle.js"></script> -->
 </head>
 <body>
     <h1>Hi from page trying to use webpack module bundler...</h1>
     <h2>My number is <span id="my_number"></span></h2>
-
-   <!--  <script>
-        import('./main.js').then(
+    
+    <!-- <script type="module" src="./bundle.js"></script>    -->
+    <script>
+        window.onload = () => {
+        import('./bundle.js').then(
             (m)=>{
-                console.log('Module main.js loaded...');
-                console.log(m.MyLuckyNumber);
+                console.log('Bundle loaded...');
             }
         )
-    </script> -->
-   <!--  <script>
-        const saberi_sa_2 = (broj)=>{
-            return broj+2;
-        }
-
-        document.getElementById('my_number').innerHTML = saberi_sa_2(5); */
-
-       /*  window.onload = () => {
-            import('./bundle.js').then(
-                (m)=>{
-                    console.log('Module loaded...');
-                    console.log(m);
-                    console.log(m.PavleBroj);
-                }
-            )
-
-        }        
-    </script> -->
-
-
-
-    <script type="module" src="./index.js"></script>   
+    }
+    </script>    
 </body>
 </html>
