--- a/index.html
+++ b/index.html
@@ -11,14 +11,44 @@
     <h2>My number is <span id="my_number"></span></h2>
     
     <!-- <script type="module" src="./bundle.js"></script>    -->
+    <div class="elementsComponent">
+        <div class="inputElement">
+            <label for="arrayElement">Element</label>
+            <input id="arrayElement" name="arrayElement" type="text" maxlength="1" size="1" style="text-align: center; margin-left: 10px;"/>
+            <button id="addButton">+</button>                        
+            <label id="errorLabel" class="error">* Value can not be empty...</label>
+        </div>               
+    </div>
+
     <script>
-        window.onload = () => {
+        /* window.onload = () => {
         import('./bundle.js').then(
+            (m)=>{
+                console.log('Bundle loaded...');
+            }
+        ) */
+        window.onload = () => {
+        import('./index.js').then(
             (m)=>{
                 console.log('Bundle loaded...');
             }
         )
     }
     </script>    
+
+    <style>
+        .elementsComponent{
+            margin: auto;
+            width: 300px;
+            border: 1px solid red;
+        }
+        .inputElement{
+            margin: 0 auto;           
+        }       
+        .error{
+            display: none;
+            color:red;
+        }
+    </style>
 </body>
 </html>
