--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Moja proba</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>    
 </head>
 <body>
     <h1>Hi from page trying to use webpack module bundler...</h1>
@@ -13,8 +13,8 @@
     <!-- <script type="module" src="./bundle.js"></script>    -->
     <div class="elementsComponent">
         <div class="inputElement">
-            <label for="arrayElement">Element</label>
-            <input id="arrayElement" name="arrayElement" type="text" maxlength="1" size="1" style="text-align: center; margin-left: 10px;"/>
+            <label for="arrayElement">Item</label>
+            <input id="arrayElement" name="arrayElement" class="arrayElement" type="text" maxlength="1" size="1"/>
             <button id="addButton">+</button>                        
             <label id="errorLabel" class="error">* Value can not be empty...</label>
         </div>               
@@ -37,17 +37,38 @@
     </script>    
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
         .elementsComponent{
+            display: block;
             margin: auto;
             width: 300px;
             border: 1px solid red;
+            font-family: 'Lato', sans-serif;;
+            font-weight: bold;
+            font-size: 18px;
         }
         .inputElement{
-            margin: 0 auto;           
+            width: fit-content;
+            margin: auto;                       
         }       
+        .arrayElement{
+            font-family: 'Lato', sans-serif;;
+            font-weight: bold;
+            font-size: 18px;
+            text-align: center;
+            margin-left: 10px;
+        }
         .error{
             display: none;
             color:red;
+        }
+        #addButton{
+            background-color: #f00;
+            color: white;
+            border-radius: 4px;
+            font-size: 14px;     
+            margin-left: 10px;       
         }
     </style>
 </body>
