--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Hi from page trying to use webpack module bundler...</h1>
     <h2>My number is <span id="my_number"></span></h2>
     
-    <!-- <script type="module" src="./bundle.js"></script>    -->
+    <div id='root'>        
+    </div>
   
 
     <script>
