--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Moja proba</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>    
+    <link rel="stylesheet" href='./index.css' />
 </head>
 <body>
     <h1>Hi from page trying to use webpack module bundler...</h1>
@@ -12,15 +13,8 @@
     
     <div id='root'>        
     </div>
-  
 
-    <script>
-        /* window.onload = () => {
-        import('./bundle.js').then(
-            (m)=>{
-                console.log('Bundle loaded...');
-            }
-        ) */
+    <script>      
         window.onload = () => {
         import('./index.js').then(
             (m)=>{
