--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
                     font-family: 'Lato', sans-serif;
                     font-weight: bold;
                     font-size: 18px;" />
-        </form>      
+        </form>     
+
+        <label id="resultBoxTitle">Result</label>
+        <textarea readonly id="resultBox">
+        </textarea> 
     </div>
 
-    <textarea readonly id="resultBox">
-    </textarea>
+    
 
     <script>      
         window.onload = () => {
