--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
     
 
     <script>      
-        window.onload = () => {
+      /*   window.onload = () => {
             import('./index.js').then(
                 (m)=>{
                     console.log('Bundle loaded...');
                 }
             )
-        }      
-      /*   window.onload = () => {
+        }      */ 
+        window.onload = () => {
             import('./bundle.js').then(
                 (m)=>{
-                    console.log('Bundle loaded...');
+                    console.log('Bundle loaded... - bundle.js');
                 }
             )
-        }       */
+        }      
     </script>    
 </body>
 </html>
