--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
         </textarea> 
     </div>
 
-    
+    <mo-dal id="dialogCalculate">
+        <label slot="slot1" class="slot1">
+            Calculating....
+        </label>
+        <div class="loader" slot="slot1"></div>
+    </mo-dal>
+
+    <mo-dal id="dialogPopulate">
+        <label slot="slot1">
+            Populating results...
+        </label>
+    </mo-dal>
 
     <script>      
       /*   window.onload = () => {
