--- a/index.html
+++ b/index.html
@@ -67,34 +67,34 @@
         </textarea> 
     </div>
 
-    <mo-dal id="dialogCalculate">
+<!--     <mo-dal id="dialogCalculate" canClose="false">
         <label slot="slot1" class="slot1">
             Calculating....
         </label>
         <div class="loader" slot="slot1"></div>
-    </mo-dal>
+    </mo-dal> -->  
 
-    <mo-dal id="dialogPopulate">
-        <label slot="slot1">
+    <modal-spinner id="dialogPopulate">
+        <label slot="text">
             Populating results...
         </label>
-    </mo-dal>
+    </modal-spinner>
 
     <script>      
-      /*   window.onload = () => {
+        window.onload = () => {
             import('./index.js').then(
                 (m)=>{
                     console.log('Bundle loaded...');
                 }
             )
-        }      */ 
-        window.onload = () => {
+        }      
+     /*    window.onload = () => {
             import('./bundle.js').then(
                 (m)=>{
                     console.log('Bundle loaded... - bundle.js');
                 }
             )
-        }      
+        }      */ 
     </script>    
 </body>
 </html>
